30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol30% accuracy lol

--- a/Neural net.ipynb
+++ b/Neural net.ipynb
@@ -126,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mini_size = 500\n",
+    "mini_size = 100\n",
     "x_mini = torch.tensor(train_x[:mini_size].astype(np.float32))\n",
     "y_mini = torch.tensor(train_y[:mini_size].astype(np.int_))\n",
     "mini_train_tensor = data_utils.TensorDataset(x_mini, y_mini)"
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +213,7 @@
     "        loss_fn = nn.CrossEntropyLoss()\n",
     "        loss = loss_fn(output, target)\n",
     "        pred = output.max(1, keepdim=True)[1]\n",
+    "#         print(f\"Prediction: {pred}, Actual: {target}, Loss: {loss}\")\n",
     "        correct = pred.eq(target.float().view_as(pred)).sum().item()\n",
     "        sum_num_correct += correct\n",
     "        sum_loss += loss.item()\n",
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
     "args[\"seed\"] = 1\n",
     "args[\"no_cuda\"] = False\n",
     "args[\"log_interval\"] = 50\n",
-    "args[\"batch_size\"] = 64\n",
+    "args[\"batch_size\"] = 8\n",
     "args[\"test-batch-size\"] = 1000\n",
     "\n",
     "params = dict()\n",
@@ -287,24 +288,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Net(params, len(ingredients)).to(device)\n",
-    "optimizer = optim.SGD(model.parameters(), lr=params[\"lr\"])"
+    "optimizer = optim.Adam(model.parameters(), lr=params[\"lr\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-7272f847b816>:9: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "<ipython-input-52-2a70aaddc3da>:9: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  batches = tqdm(enumerate(train_loader), total=len(train_loader))\n"
      ]
@@ -312,12 +313,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2d377bdb0e143b2a797edbdd1aae559",
+       "model_id": "b066a26401d8469a8e5dd2e5267d7d3a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -333,12 +334,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3a936d768484c48b741e53f19b9b131",
+       "model_id": "902cd8eefbe24aed853d6f670ffe623f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -354,12 +355,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e55b756321e54ea4a38218417baec3ef",
+       "model_id": "163486bc8da747aaa2ffb0fa87d6051b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -375,12 +376,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01c0a953b4eb4414bad03d9e943bf189",
+       "model_id": "914c761d685d4423b35e66fec356764e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -396,128 +397,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0891ac46f84e4ca1a7b1740e3f1e920c",
+       "model_id": "96ae75ee34ee4b518269b0183d80f362",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e004baf31cb1434cbe28d7f94b463082",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0445c6366669478d8418d22d137c8e94",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7013f875991451189ec07e5fd003fd0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a89c6d5257c64befb0e74059742e2500",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf80af8d62984e3d903fcbbf06361cf2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
