Changed from cross entropy to NLL

--- a/Neural net.ipynb
+++ b/Neural net.ipynb
@@ -126,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mini_size = 100\n",
+    "mini_size = 10000\n",
     "x_mini = torch.tensor(train_x[:mini_size].astype(np.float32))\n",
     "y_mini = torch.tensor(train_y[:mini_size].astype(np.int_))\n",
     "mini_train_tensor = data_utils.TensorDataset(x_mini, y_mini)"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,8 +210,9 @@
     "        data, target = data.to(device), target.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        output = model(data)\n",
-    "        loss_fn = nn.CrossEntropyLoss()\n",
-    "        loss = loss_fn(output, target)\n",
+    "#         loss_fn = nn.CrossEntropyLoss()\n",
+    "#         loss = loss_fn(output, target)\n",
+    "        loss = F.nll_loss(output, target)\n",
     "        pred = output.max(1, keepdim=True)[1]\n",
     "#         print(f\"Prediction: {pred}, Actual: {target}, Loss: {loss}\")\n",
     "        correct = pred.eq(target.float().view_as(pred)).sum().item()\n",
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +269,14 @@
     "args[\"seed\"] = 1\n",
     "args[\"no_cuda\"] = False\n",
     "args[\"log_interval\"] = 50\n",
-    "args[\"batch_size\"] = 8\n",
+    "args[\"batch_size\"] = 128\n",
     "args[\"test-batch-size\"] = 1000\n",
     "\n",
     "params = dict()\n",
     "params[\"epochs\"] = 10\n",
-    "params[\"lr\"] = 5e-2\n",
-    "params[\"hidden_1\"] = len(ingredients)*2\n",
-    "params[\"hidden_2\"] = len(ingredients)*2\n",
+    "params[\"lr\"] = 0.01\n",
+    "params[\"hidden_1\"] = len(ingredients)\n",
+    "params[\"hidden_2\"] = len(ingredients)\n",
     "\n",
     "use_cuda = not args[\"no_cuda\"] and torch.cuda.is_available()\n",
     "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,8 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -313,12 +316,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b066a26401d8469a8e5dd2e5267d7d3a",
+       "model_id": "1fb70f70704b44e59593d6304486d4fe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -334,12 +337,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "902cd8eefbe24aed853d6f670ffe623f",
+       "model_id": "3686a9bafb7346a08685efc7ab4714ef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -355,12 +358,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "163486bc8da747aaa2ffb0fa87d6051b",
+       "model_id": "1782641be7c84ea3a58a37c88f6f9ae7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -376,12 +379,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "914c761d685d4423b35e66fec356764e",
+       "model_id": "c84e1d84e8454848a9d17086dae0f320",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -397,19 +400,366 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96ae75ee34ee4b518269b0183d80f362",
+       "model_id": "4a87982d6c5d4bdab1160b9e5ffe50c7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=13.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7461d4ebd3f040af8b41061ea8444d63",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "428291dbb949401c8cc51e0484bc7ee7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "189701307c434ce7a43eda2387fe0a88",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "899edea2a66a4ab7a390bf6d1c880f06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34fbcdd709f942b3850bd352fa1cadd8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
+    "# return F.log_softmax(x, dim=1) NN results \n",
+    "torch.manual_seed(args[\"seed\"])\n",
+    "for epoch in range(1, params[\"epochs\"] + 1):\n",
+    "    train(model, device, mini_train_loader, optimizer, epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-89-6594b9d08a45>:9: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  batches = tqdm(enumerate(train_loader), total=len(train_loader))\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cd949614b0c4b1aac3ac18d64f25302",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9225a019c4d43679eafe83d4df264b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "107606f369934c5b9a1ee40b0b0f0bce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fcf97d4ec42d4d06bf07187ddc263003",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8372e194e634c7e810150a7c8592449",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42df653043a64b8e8932e28c306c499e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2a412c66fdd494fa8c7f3615ea52a2f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aac31ecfce124d7698302fa6d445d6b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec05ad110901419e90bf10ced9e902df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b98c7952866496497742eb6a933207f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=79.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using NLL loss instead of cross entropy\n",
     "torch.manual_seed(args[\"seed\"])\n",
     "for epoch in range(1, params[\"epochs\"] + 1):\n",
     "    train(model, device, mini_train_loader, optimizer, epoch)"
